--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#about">Hire Me!</a>
+      <a class="btn-getstarted" href="#contact">Hire Me!</a>
 
     </div>
   </header>
@@ -76,7 +76,7 @@
             <p>I am creating innovative software and web solutions that transform ideas into seamless, functional, and intuitive experiences</p>
             <div class="d-flex">
               <a href="assets/myresume.pdf" class="btn-get-started download-resume-btn"><i class="fa-solid fa-download"></i> Download resume </a>
-              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center"><i class="fa-solid fa-phone-volume fa-bounce"></i><span> Contact Me</span></a>
+              <a href="#contact" class="glightbox btn-watch-video d-flex align-items-center"><i class="fa-solid fa-phone-volume fa-bounce"></i><span> Contact Me</span></a>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="200">
