--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <p>Explore my portfolio to see how my expertise in web and software development can bring your project to life. From innovative designs to robust solutions, I’m committed to delivering exceptional results. Let’s collaborate to turn your ideas into reality—contact me today to get started!</p>
           </div>
           <div class="col-xl-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Contact me <i class="fa-solid fa-phone-volume"></i></a>
+            <a class="cta-btn align-middle" href="#contact">Contact me <i class="fa-solid fa-phone-volume"></i></a>
           </div>
         </div>
 
@@ -751,7 +751,7 @@
       <!-- You can delete the links only if you've purchased the pro version. -->
       <!-- Licensing information: https://bootstrapmade.com/license/ -->
       <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-      Designed by <a href="https://bootstrapmade.com/">Shailaja Kumari</a>
+      Designed by <a href="#index.html">Shailaja Kumari</a>
     </div>
   </div>
 
